# vllm

./: .gitignore  AGENTS.md  README.md  mkdocs.yaml  pyproject.toml  setup.py
.buildkite/test_areas/: disaggregated.yaml  distributed.yaml  quantization.yaml
csrc/cpu/: cpu_types_x86.hpp
csrc/rocm/: skinny_gemms.cu
docker/: Dockerfile  Dockerfile.nightly_torch  Dockerfile.rocm
docs/: OVERVIEW.md
docs/capture_consumers/: design.md  roadmap.md
docs/design/: capture_consumers.md  capture_parallelism.md  dynamic_steering.md  dynamic_steering_apc_notification.md  dynamic_steering_row_gating.md  steering_runtime.md  v2_runner_steering_capture.md
docs/features/: activation_patching.md  activation_storing.md  activation_storing_roadmap.md  capture_consumers.md  capture_consumers_filesystem.md  sae_steering.md  steering.md
docs/steering/: API.md  MVP_IMPLEMENTATION.md  ROADMAP.md  STEERING.md
examples/capture_consumers/: plugin_authoring.md
examples/capture_consumers/activation_reward_producer/: README.md  pyproject.toml  test.py
examples/capture_consumers/activation_reward_producer/activation_reward_producer/: __init__.py
examples/capture_consumers/dynamic_steering_controller/: README.md  pyproject.toml  test.py  test_minimal_examples.py
examples/capture_consumers/dynamic_steering_controller/dynamic_steering_controller/: __init__.py  e2e_stub.py  minimal_examples.py
examples/capture_consumers/jlens_readout/: pyproject.toml
examples/capture_consumers/jlens_readout/jlens_readout/: __init__.py
examples/jlens_glm52/: build-env.sh  live_demo.py  live_demo_transcripts.md  pack_steering.py  phase2_parity.py  sbatch-serve-glm52.sh  smoke_client.py  steering_demo_transcripts.md
examples/online_serving/: openai_patch_client.py  openai_steering_client.py
requirements/: common.txt
rust/: Cargo.toml  README.md
rust/docs/: OVERVIEW.md
rust/proto/: vllm_grpc.proto
tests/: gpu_clamp_validate.py  gpu_patch_poison_validate.py  gpu_patch_sweep_validate.py  gpu_patch_validate.py  gpu_patch_vector_validate.py  patch_2a_amortized.py  patch_2a_endpoint_validate.py  patch_2a_proof.py  patch_fragmentation.py  patch_full_grid_time.py  test_config.py
tests/config/: test_sampling_params_nested_steering.py  test_steering_types_per_role.py
tests/distributed/: test_ray_v2_executor.py
tests/engine/: test_arg_utils.py  test_sae_module_topology.py
tests/kernels/: test_top_k_per_row.py
tests/models/: registry.py
tests/tool_parsers/: test_mistral_tool_parser.py
tests/v1/: test_request_metadata.py  test_request_steering.py  test_sae_full_reconstruction_types.py  test_sae_sampling_params.py  test_sae_steering_types.py  test_sae_wire_roundtrip.py  test_steering_apc_block_keys.py  test_steering_auto_promote.py  test_steering_clamps.py  test_steering_clamps_packed.py  test_steering_clamps_types.py  test_steering_clamps_wire.py  test_steering_inline_packed.py  test_steering_schema.py  test_steering_shm.py  test_steering_types.py  test_steering_zstd.py
tools/pre_commit/: generate_attention_backend_docs.py  mypy.py
upstream/: RFC.md  prior.md
vllm/: envs.py  exceptions.py  forward_context.py  outputs.py  sampling_params.py
vllm/config/: __init__.py  activation_storing.py  activation_storing_types.py  capture_consumers.py  parallel.py  patch.py  sae_steering_types.py  steering.py  steering_types.py  vllm.py
vllm/v1/: outputs.py  (+6 more)
(+494 files in other folders)
