[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-activation-reward-producer"
version = "0.1.0"
dependencies = ["vllm", "torch"]

[project.entry-points."vllm.capture_consumers"]
activation_reward = "activation_reward_producer:ActivationRewardProducer"
