[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vllm-dynamic-steering-controller"
version = "0.1.0"
dependencies = ["vllm"]

[project.entry-points."vllm.capture_consumers"]
dynamic_steering = "dynamic_steering_controller:DynamicSteeringController"
