[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-dynamic-steering-controller"
version = "0.1.0"
dependencies = ["vllm"]

[project.entry-points."vllm.capture_consumers"]
dynamic_steering = "dynamic_steering_controller:DynamicSteeringController"
dynamic_steering_e2e = "dynamic_steering_controller.e2e_stub:DeterministicOverrideStub"
